--- a/google.css
+++ b/google.css
@@ -41,13 +41,22 @@
         padding: 0 8px;
     }
 
-    .header-img {
-        border-radius: 100%;
+    .header-img, .profile-img {
+        border-radius: 50%;
+        padding: 5px;
+        
     }
 
     .header-img:hover {
-        box-shadow: 0 0 100% 0 gainsboro;
-        border-radius: 100%;
+        box-shadow: 0 0 5px 0 gainsboro;
+        border-radius: 20px;
+        background-color: gainsboro;
+        cursor: pointer;
+    }
+
+    .profile-img:hover {
+        box-shadow: 0 0 10px 0 gainsboro;
+        border-radius: 20px;
         cursor: pointer;
         background-color: gainsboro;
     }
